[gd_scene load_steps=5 format=3 uid="uid://dd4u3jw54sxy8"]

[ext_resource type="Script" path="res://main/Main.gd" id="1_ty1ig"]
[ext_resource type="Texture2D" uid="uid://fuc828eaqhhy" path="res://images/frames/PartyFrame.png" id="2_21rcg"]
[ext_resource type="Texture2D" uid="uid://cph5way6o3ooi" path="res://images/frames/ScenarioFrame.png" id="3_4y55p"]
[ext_resource type="PackedScene" uid="uid://ycsuyn14ik31" path="res://main/PCBox.tscn" id="3_lppw4"]

[node name="Main" type="MarginContainer"]
mouse_filter = 2
script = ExtResource("1_ty1ig")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Party" type="VBoxContainer" parent="HBox"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
theme_override_constants/separation = 0

[node name="PC1Frame" type="NinePatchRect" parent="HBox/Party"]
custom_minimum_size = Vector2(0, 216)
layout_mode = 2
texture = ExtResource("2_21rcg")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="PC1" parent="HBox/Party/PC1Frame" instance=ExtResource("3_lppw4")]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 310.0
offset_bottom = 206.0

[node name="PC2Frame" type="NinePatchRect" parent="HBox/Party"]
custom_minimum_size = Vector2(0, 216)
layout_mode = 2
texture = ExtResource("2_21rcg")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="PC2" parent="HBox/Party/PC2Frame" instance=ExtResource("3_lppw4")]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 310.0
offset_bottom = 206.0

[node name="PC3Frame" type="NinePatchRect" parent="HBox/Party"]
custom_minimum_size = Vector2(0, 216)
layout_mode = 2
texture = ExtResource("2_21rcg")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="PC3" parent="HBox/Party/PC3Frame" instance=ExtResource("3_lppw4")]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 310.0
offset_bottom = 206.0

[node name="PC4Frame" type="NinePatchRect" parent="HBox/Party"]
custom_minimum_size = Vector2(0, 216)
layout_mode = 2
texture = ExtResource("2_21rcg")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="PC4" parent="HBox/Party/PC4Frame" instance=ExtResource("3_lppw4")]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 310.0
offset_bottom = 206.0

[node name="PC5Frame" type="NinePatchRect" parent="HBox/Party"]
custom_minimum_size = Vector2(0, 216)
layout_mode = 2
texture = ExtResource("2_21rcg")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="PC5" parent="HBox/Party/PC5Frame" instance=ExtResource("3_lppw4")]
visible = false
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 310.0
offset_bottom = 206.0
disabled = true

[node name="Frame" type="NinePatchRect" parent="HBox"]
custom_minimum_size = Vector2(1600, 1080)
layout_mode = 2
texture = ExtResource("3_4y55p")
draw_center = false
patch_margin_left = 40
patch_margin_top = 40
patch_margin_right = 40
patch_margin_bottom = 40
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Empty1" type="Control" parent="HBox/Frame"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Empty2" type="Control" parent="HBox/Frame"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="button_down" from="HBox/Party/PC1Frame/PC1" to="." method="_on_pc_1_button_down"]
[connection signal="button_down" from="HBox/Party/PC2Frame/PC2" to="." method="_on_pc_2_button_down"]
[connection signal="button_down" from="HBox/Party/PC3Frame/PC3" to="." method="_on_pc_3_button_down"]
[connection signal="button_down" from="HBox/Party/PC4Frame/PC4" to="." method="_on_pc_4_button_down"]
[connection signal="button_down" from="HBox/Party/PC5Frame/PC5" to="." method="_on_pc_5_button_down"]
